<resources>
    <string name="app_name">Transectas</string>
    <string name="app_version">1.0.0</string>
    <string name="app_description">Transectas es la primera aplicación desarrollada íntegramente por el INCUAPA para el registro de prospecciones arqueológicas en el campo. Desarrollada por Juan Manuel Capuano (CPA Conicet/Incuapa/Unicen).</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="salir">Salir</string>
    <string name="PrimeraSeccion">1ra. Sección</string>
    <string name="SegundaSeccion">2da. Sección</string>
    <string name="observaciones">Observaciones</string>
    <string name="gpsHabilitar">Debe habilitar el GPS (GPS y Network)</string>
    <string name="gpsSinPermiso">No se aceptó el permiso</string>
    <string name="bdExport">Base de Datos exportada</string>
    <string name="bdExportError">Hubo un error al exportar la Base de Datos</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_proyecto">ProyectoActivity</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="save_change">¿Desea guardar los cambios?</string>
    <string name="addItemTable">Agregar item tabla</string>
    <string name="projectName">Proy. Nº: </string>
    <string name="projectTitle">Proyectos</string>
    <string name="projectEditTitle">Editar Proyecto</string>
    <string name="projectItem">Item Proyecto</string>
    <string name="date">Fecha</string>
    <string name="dateTitle">Fecha: </string>
    <string name="location">Ubicación</string>
    <string name="locationTitle">Ubicación: </string>
    <string name="transecta">Transecta</string>
    <string name="transectsTitle">Transectas</string>
    <string name="btnsiguiente">Guardar Proyecto</string>
    <string name="btnCrearTransecta">Crear Transecta</string>
    <string name="title_activity_add__transecta">Agregar Transecta</string>
    <string name="transectaItem">Item Transecta</string>
    <string name="transectaNumero">Número</string>
    <string name="origenGps">xx.xx.xx</string>
    <string name="destinoGps">xx.xx.xx</string>
    <string name="rumboTransecta">Rumbo</string>
    <string name="title_activity_new__transecta">Nueva Transecta</string>
    <string name="longitudTransecta">Long.(mts)</string>
    <string name="contAmbTransecta">Contexto Ambiental</string>
    <string name="posicionGpsOrigenO">Origen GPS (O)</string>
    <string name="posicionGpsOrigenS">Origen GPS (S)</string>
    <string name="posicionGpsDestinoO">Destino GPS (O)</string>
    <string name="posicionGpsDestinoS">Destino GPS (S)</string>
    <string name="anchoTransecta">Ancho (mts)</string>
    <string name="operadorTransecta">Operador</string>
    <string name="btnCrearMuestreo">Crear Muestreo</string>
    <string name="GuardarTransecta">Guardar Transecta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabs_muestreo">TabsMuestreo</string>
    <string name="tab_ambienteSedimentario">Amb Sed</string>
    <string name="tab_Vegetacion">Veget</string>
    <string name="tab_Bioturbacion">Biot - AccAnt</string>
    <string name="tab_AccionAntropica">AccAntr</string>
    <string name="tab_MatArqueoFaun">MatArq</string>
    <string name="title_activity_new__muestreo">New_Muestreo</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="unable_to_update">No se ha podido actualizar el Proyecto</string>
    <string name="empty_not_saved">No se ha modificado datos del Proyecto</string>
    <string name="project_saved">Se ha guardado el Proyecto.</string>
    <string name="project_updated">Se ha actualizado el Proyecto.</string>
    <string name="project_not_saved">Hubo un error al guardar el proyecto.</string>
    <string name="no_project">Sin Proyecto</string>
    <string name="project_obligatorio">Debe ingresar un nombre de Proyecto</string>
    <string name="transecta_obligatorio">Debe completar todos los campos</string>
    <string name="muestreo_obligatorio">Debe ingresar un número de Muestreo</string>
    <string name="no_transecta">Sin Transecta</string>
    <string name="unable_to_update_transecta">No se ha podido actualizar la Transecta</string>
    <string name="transecta_updated">Se ha actualizado la Transecta.</string>
    <string name="empty_not_saved_transecta">La transecta está vacía</string>
    <string name="sin_cambios">No se ha actualizado</string>
    <string name="transecta_saved">Se ha guardado la Transecta</string>
    <string name="transectaNew">Nueva Transecta</string>
    <string name="transectaEdit">Editar Transecta</string>
    <string name="transecta_vacia">Debe completar los campos obligatorios</string>
    <string name="transecta_not_saved">Hubo un error al guardar la Transecta</string>
    <string name="transecta_a_proyecto_not_saved">Hubo un error al guardar la Transecta en el Proyecto</string>
    <string name="transecta_repetida">Existe una Transecta con ese número</string>
    <string name="title_new_transecta"><![CDATA[Lista Transectas —>]]></string>
    <string name="muestreo_saved">Se ha guardado el Muestreo</string>
    <string name="muestreo_not_saved">Hubo un error al guardar el Muestreo</string>
    <string name="muestreo_a_transecta_not_saved">Hubo un error al guardar el muestreo en la transecta</string>
    <string name="no_muestreo">Sin Muestreo</string>
    <string name="unable_to_update_muestreo">No se ha podido actualizar el Muestreo</string>
    <string name="muestreo_updated">Se ha actualizado el Muestreo.</string>
    <string name="empty_not_saved_muestreo">El Muestreo está vacía</string>
    <string name="muestreo_repetido">Existe un Muestreo con ese número</string>
    <string name="hallazgo_saved">Se ha guardado el Hallazgo</string>
    <string name="hallazgo_to_sampling_error">Hubo un error al guardar el hallazgo en el muestreo</string>
    <string name="hallazgo_not_saved">No se ha podido guardar el Hallazgo</string>
    <string name="unable_to_update_hallazgo">No se ha podido actualizar el Hallazgo</string>
    <string name="hallazgo_updated">Se ha actualizado el Hallazgo.</string>
    <string name="empty_not_saved_hallazgo">El Hallazgo está vacío</string>
    <string name="hallazgo_repetido">Existe un Hallazgo con ese número</string>
    <string name="hallazgo_obligatorio">Debe completar todos los campos</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="nro_muestreo">N°muestreo:</string>
    <string name="samplingTitle">Muestreos</string>
    <string name="title_lista_muestreos"><![CDATA[Lista Muestreos —>]]></string>
    <string name="title_ambienteSed">Ambiente Sedimentario</string>
    <string name="title_pendiente">Pendiente</string>
    <string name="title_sedimento">Sedimento Tipo</string>
    <string name="title_procesoDom">Proceso dominante</string>
    <string name="title_potencialEnter">Potencial de enterramiento</string>
    <string name="title_potencialEnterObs">Observaciones</string>
    <string name="title_presenciaAgua">Presencia de agua</string>
    <string name="title_ambienteSedObs">Observaciones</string>
    <string name="erosion">Erosión</string>
    <string name="depositacion">Depositación</string>
    <string name="pedogenesis">Pedogénesis</string>
    <string name="nulo">Nulo</string>
    <string name="bajo">Bajo</string>
    <string name="alto">Alto</string>
    <string name="ausencia">Ausencia</string>
    <string name="humedad">Humedad</string>
    <string name="encharcamiento">Encharcamiento</string>
    <string name="escorrentia">Escorrentia</string>
    <string name="canal">Canal</string>
    <string name="title_tipoVeget">Tipo vegetación</string>
    <string name="title_distribVeget">Distribución</string>
    <string name="title_visibilidadVeget">Visibilidad</string>
    <string name="title_presenciaFauna">Presencia de fauna actual</string>
    <string name="ck_excelente">Excelente (s/cobertura vegetal)</string>
    <string name="ck_muyBuena">Muy buena (1-25% cobertura vegetal)</string>
    <string name="ck_buena">Buena 25-50%</string>
    <string name="ck_regular">Regular (50-75%)</string>
    <string name="ck_mala">Mala (75-100%)</string>
    <string name="title_bioturbacion">Bioturbación</string>
    <string name="title_accionAntro">Acción antrópica</string>
    <string name="title_descripcion">Descripción</string>
    <string name="ck_vegetalesBio">Vegetales</string>
    <string name="ck_roedoresBio">Roedores</string>
    <string name="ck_pisoteoBio">Pisoteo</string>
    <string name="ck_carnivorosBio">Carnívoros</string>
    <string name="ck_otrosBio">Otros</string>
    <string name="ck_ganaderiaAcc">Ganadería</string>
    <string name="ck_agriculturaAcc">Agricultura</string>
    <string name="ck_alambradoAcc">Alambrado</string>
    <string name="ck_construccionAcc">Construcción</string>
    <string name="ck_caminoAcc">Camino</string>
    <string name="ck_terraplenesAcc">Terraplenes</string>
    <string name="ck_canalAcc">Canal artificial</string>
    <string name="ck_desechosAcc">Desechos</string>
    <string name="ck_otrosAcc">Otros</string>
    <string name="title_presenciaMaterial">Material arqueológico y faunístico</string>
    <string name="title_pm_litico">Lítico</string>
    <string name="title_pm_faunisitico">Faunístico</string>
    <string name="title_pm_ceramica">Cerámica</string>
    <string name="title_pm_gress">Gress</string>
    <string name="title_pm_vidrio">Vidrio</string>
    <string name="title_pm_otros">Otros</string>
    <string name="title_pm_observaciones">Observaciones</string>
    <string name="title_activity_muestreos_tabs">MuestreosTabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="dialog_message">La función GPS puede tomar mucho tiempo en obtener coordenadas.</string>
    <string name="dialog_title">Atención</string>
    <string name="ocurrenciaNum"># Ocur.</string>
    <string name="findingTitle">Hallazgo F.</string>
    <string name="findingNew">Nuevo Hallazgo</string>
    <string name="findingItem">Item Hallazgo</string>
    <string name="findingEdit">Editar Hallazgo</string>
    <string name="tp_ocur1">Tp. Ocurrencia 1</string>
    <string name="tp_ocur2">Tp. Ocurrencia 2</string>
    <string name="conc_carc">Conc/Carc#</string>
    <string name="ambiente_inmediato">Ambiente Inmediato</string>
    <string name="posicion_hallazgo">Posición</string>
    <string name="orientacion_agua">Orientación Agua</string>
    <string name="taxon_hallazgo">Taxón</string>
    <string name="tamanio_taxon">Tamaño Taxón</string>
    <string name="observaciones_hallazgo">Observaciones</string>
    <string name="ocurNum">#Ocur:</string>
    <string name="Nro">\"Nro: \"</string>
    <string name="new_project_onboard">Crea un nuevo proyecto</string>
    <string name="new_transect_onboard">Agrega Transectas al proyecto creado</string>
    <string name="new_sampling_onboard">Agrega Muestreos a la Transecta creada</string>
</resources>